json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,111 @@
 {
  "items": [
   {
+    "id": "9orl6wTiS62JZzTFvp3dTw",
+    "url": "https://jobmote.com/job/61013/ios-developer-freelance-remote-berlin-germany/",
+    "title": "iOS Developer - Freelance (Remote) - Berlin, Germany",
+    "tags": [
+      "DBG:surround``4N( OR(look, search),     4N(OR(distribut, remot), OR(employe,develop,engin,team)) )",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:cocoa/apple/8",
+      "DBG_TECH1:k/t/w:firebase/mobile/8",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=22, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=19, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Darwin Recruitment",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 14, 2019 10:07:34 PM",
+    "validThrough": "Aug 17, 2019 10:07:34 PM",
+    "crawled": "Aug 15, 2019 3:06:25 AM",
+    "content": "<div><p> My customer is currently looking to hire a remote iOS Developer for 2 - 3 months, to help build their application. They are a start-up developing a B2B product for a sales platform. You need to be available for onsite onboarding in Berlin for a period of 2-3 weeks, then the position will be remote thereafter.</p> <p> Tasks &amp; Responsibilities:</p>  Help build the application, implementing new features and improving existing.  Work towards using clean code, take part in design reviews with the team.  Bug fixing and Troubleshooting after the initial phase  Work closely with UX/UI to improve design standards <p> Your Profile:</p>  Minimum 2 years' experience in iOS (Swift) Development  Good knowledge of Cocoa  Experience with Firebase</div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "rzsVkyZtSQqLxZaShz3X0g",
+    "url": "https://remoteok.io/jobs/74498",
+    "title": "Senior MacOS Engineer",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:ios/apple/2",
+      "DBG_TECH1:k/t/w:ios/mobile/2",
+      "DBG_TECH1:k/t/w:macos/apple/12",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=2, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=14, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple"
+    ],
+    "hiringOrganization": {
+      "name": "DuckDuckGo",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 14, 2019 8:59:33 PM",
+    "validThrough": "Aug 21, 2019 8:59:33 PM",
+    "crawled": "Aug 14, 2019 9:30:29 PM",
+    "content": "<span></span> <span><h4>DuckDuckGo</h4></span> <br> <h3>Senior Macos Engineer</h3> <div>  <div>   \\nWe are a diverse team from around the world, on&nbsp;a mission to make DuckDuckGo the company people trust most with their online privacy, and we want your help!\\n\\nJoin us as a&nbsp;Senior macOS Engineer&nbsp;andhelp shape the DuckDuckGo experiences across desktop and mobile platforms.\\n\\nAs part of our growing team, you will collaborate with team members at all levels to identify and close major gaps in our products. Examples of projects you might work on include expanding and improving mobile content blocking, in addition to running experiments to measure and improve user conversion and usability within our applications. You will take direct responsibility of macOS application features, drive improvements, and own product maintenance.\\n\\nWe are fully-remote and empower our team to be self-directed and self-motivated in their projects. If you'd thrive in that environment, and our core values resonate with you -- build trust, question assumptions, and validate direction -- you'll fit right in!\\n\\nWhat you will do:\\n\\n\\n* Lead projects from proposal through postmortem, assessing vague problems, proposing high impact solutions, and executing them against a set of success criteria.\\n\\n* Step up to resolve product issues – large and small.\\n\\n* Identify opportunities to increase searches and enhance the standard of trust online.\\n\\n* Own major application features and take responsibility for their maintenance and improvement over time.\\n\\n* Collaborate with peers remotely during product brainstorms, technical design discussions, pair programming sessions and code reviews.\\n\\n* Write pragmatic, performant, and testable code that works consistently across devices.\\n\\n* Always work to improve the quality of the codebase.\\n\\n\\n\\n\\nWhat we are looking for:\\n\\n\\n* Significant macOS experience (+5 years), including prior work on at least two large native applications.\\n\\n* Experience programming in Swift.\\n\\n* Experience in iOS development.\\n\\n* Willingness to learn new programming languages and ideas.\\n\\n* Application architecture experience, including familiarity with MVC/MVVM concepts and how they apply to applications.\\n\\n* Familiarity with threading and memory management.\\n\\n* Practiced understanding of how to work with the different libraries and components on macOS and iOS.\\n\\n* Experience collaborating with a cross-functional team.\\n\\n* Experience or interest in project advisory, strategic leadership, and/or mentoring.\\n\\n* Effective project management skills, paired with excellent communication skills.\\n\\n\\n\\n\\nOther things to know:\\n\\n\\n* While we leverage specific job titles for hiring purposes, we do not use them internally. Instead, we follow our own professional levels, with expectations for each level clearly defined across several dimensions.\\n\\n* We are a small, remote team distributed across time zones, and we rely on a variety of communication tools throughout the day\\n\\n* Sometimes we meet up! Expect to travel at least two times a year: once for our all-hands meetup and again for a team retreat (each ~4-5 days).\\n\\n* We believe in a focused approach to collaboration, where individual team members work on a single top priority at a time, each supporting larger, company-wide objectives. This philosophy serves to impact our vision to raise the standard of trust online.\\n\\n* Our work philosophy centers on empowered project management. All team members have opportunities to run projects.\\n\\n* Transparency supports individual and team success at DuckDuckGo. We encourage everyone to participate in areas of interest throughout the company. Anyone and everyone can (and should) ask questions and offer feedback about our products and internal projects.\\n\\n* We aim to exemplify our values (build trust, question assumptions, and validate direction) in everything we do.\\n\\n* While this is a full-time job, we offer a flexible work arrangement with no core hours, expecting an average commitment of 40 hours per week.\\n\\n* We support professional development of our team members through career advisory and a learning stipend, reinforcing our culture of growth and skill-building.\\n\\n\\n\\n\\nDuckDuckGo does not work with any recruiting agencies or services. Instead, we work with each candidate one-on-one throughout a unique hiring process that we've built to reflect our company culture.\\n\\nDuckDuckGo provides equal employment opportunities to all employees and applicants for employment, and prohibits discrimination and harassment of any type without regard to race, color, religion, age, sex, national origin, disability status, genetics, protected veteran status, sexual orientation, gender identity or expression, or any other characteristic protected by federal, state or local laws.\\n\\nIf you think you might thrive in this environment, we would love to hear from you. Use the application to apply!  </div> </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "twlIx2zESNq2-3vuYTCoZQ",
     "url": "https://stackoverflow.com/jobs/288997/senior-macos-engineer-duckduckgo?a=1yV4U3P0OQ9O",
     "title": "Senior macOS Engineer at DuckDuckGo  ",
