--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,121 @@
 {
  "items": [
   {
+    "id": "xlvpmo2BTmSi8zlBlokMRA",
+    "url": "https://landing.jobs/at/devexperts/ios-developer-in-porto-2019-8?utm_campaign=landing+rss&utm_content=iOS+Developer&utm_medium=referral&utm_source=rss",
+    "title": "iOS Developer",
+    "tags": [
+      "DBG:surround``2N(work, remot) 2N OR(option, allow, abl, possibl, permit)",
+      "DBG_TECH1:k/t/w:cocoa/apple/16",
+      "DBG_TECH1:k/t/w:ios/apple/8",
+      "DBG_TECH1:k/t/w:ios/mobile/8",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:objective-c/apple/6",
+      "DBG_TECH1:k/t/w:objective-c/c/4",
+      "DBG_TECH1:k/t/w:objective-c/mobile/16",
+      "DBG_TECH1:k/t/w:swift/apple/10",
+      "DBG_TECH1:k/t/w:swift/mobile/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=4, mobile=41, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=40, java=2, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/50",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "50% remote"
+    ],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "Devexperts",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 16, 2019 9:57:39 AM",
+    "validThrough": "Aug 23, 2019 9:57:39 AM",
+    "crawled": "Aug 16, 2019 10:07:28 AM",
+    "content": "<div><h3>iOS Developer</h3></div><div>Company: Devexperts</div><div>Location: Porto, PT</div>Level: Intermediate<br>Language: English <div>Mobile Apps Developer<br>Skills:</div><li>Cocoa </li><li>iOS </li><li>Mobile Applications </li><li>Objective-C </li><li>SWIFT </li><h3>Intro</h3><p>Devexperts specialises in the development of highly sophisticated software solutions and services for the Financial Markets industry. Our clients are retail and institutional brokers, exchanges and buy-side firms, and our products cover a wide array of applications, from online and desktop trading execution platforms, risk management and fix gateways, to one of the industry’s most encompassing offer of real-time and historical data services.</p><p>We are now looking for an&nbsp;<strong>iOS Developer</strong>&nbsp;to join our team in Porto, who will:</p><ul><li>Participate in the development of client-server solutions for mobile platforms</li><li>Create and troubleshoot the code, participate in designing solution architecture</li><li>Research new technologies, platforms and development tools</li><li>Be a part of a highly skilled and creative development team</li></ul><h4>Main requirements</h4><ul><li>Bachelor's or higher technical degree in Computer Science or a closely related field</li><li>2+ years of experience in Software Development</li><li>Solid knowledge of common data structures and algorithms</li><li>Knowledge of OOP principles and the ability to implement them in practice</li><li>Solid knowledge of Objective-C</li><li>Good knowledge of Cocoa framework</li><li>Good communication skills</li><li>Ability to search for required information without assistance, share knowledge with the team</li></ul><h4>Nice to have</h4><ul><li>Experience with financial, brokerage or exchange-related software</li><li>Experience in Swift development</li><li>Knowledge of Java</li><li>Knowledge of Design Patterns</li><li>Relation DB principles and structure, knowledge of SQL</li><li>User Interface design and usability design experience</li></ul><h4>Perks</h4><ul><li>Flexible schedules</li><li>Possibility to work remotely</li><li>Paid vacation 22 days</li><li>Insurance coverage for you and your children</li><li>Partial reimbursement for&nbsp;gym memberships</li><li>A modern office with all the features you need to strive, from&nbsp;well-equipped workspaces to available food and drinks<br></li></ul>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
+    "id": "Vd4kJREvR56aqMrl1fCCIA",
+    "url": "https://remote.co/job/ios-developer-15/",
+    "title": "iOS Developer",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG_TECH1:k/t/w:ios/apple/22",
+      "DBG_TECH1:k/t/w:ios/mobile/22",
+      "DBG_TECH1:k/t/w:objective-c/apple/6",
+      "DBG_TECH1:k/t/w:objective-c/c/4",
+      "DBG_TECH1:k/t/w:objective-c/mobile/16",
+      "DBG_TECH1:k/t/w:swift/apple/10",
+      "DBG_TECH1:k/t/w:swift/mobile/16",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=4, mobile=54, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=38, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "1 Second Everyday",
+      "sameAs": "https://1-second-everyday.breezy.hr/p/21b278a7ba7a-ios-developer?source=remote.co"
+    },
+    "salary": {
+      "currency": "USD",
+      "minValue": 72000,
+      "maxValue": 123000,
+      "info": "",
+      "unit": "YEAR",
+      "parser": "SalaryParserLargeText",
+      "isEquity": false,
+      "formatted": "USD 72k - 123k /Year"
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 15, 2019 8:42:59 PM",
+    "validThrough": "Aug 22, 2019 8:42:59 PM",
+    "crawled": "Aug 15, 2019 9:31:18 PM",
+    "content": "<h3>iOS Developer at <span>1 Second Everyday</span></h3><div><span><i></i> Remote</span>         | <span> International </span></div><div>            <h5><strong>About us</strong></h5><p><a href='https://1se.co/' rel='nofollow'>1 Second Everyday&nbsp;</a>is a video diary app that makes it easy to create the movie of your life. In a couple of minutes, parents can relive the first year of their child’s life, look back at their last family vacation, or see their entire journey together. It gives anyone the power to reflect on school, friends, projects, and adventures. From our humble Kickstarter beginnings, we’ve grown into an award-winning app with millions of downloads.</p><h5><strong>About the iOS Developer position</strong></h5><p>We are a small but growing company looking for an Intermediate iOS Developer to join our 100% distributed team. You will be an integral part of our iOS team and will work with our product design team on projects. As you’ll be joining a small iOS team, you will help define our culture. Including automated testing, code reviews, and pair programming.</p><h5><strong>The details:</strong></h5><ul><li>This is a full-time, remote position.</li><li>We’re offering between $72,000-$123,000 USD per year for this role based on your experience and cost of living.</li><li>No share options or equity.</li><li>This position requires travel to our semi-annual retreats (<a href='https://medium.com/1-second-everyday/planning-1ses-5th-team-retreat-612316987ca9' rel='nofollow'>Last one was Peru and allowed families to come too!</a>).</li></ul><h5><strong>iOS Developer responsibilities:</strong></h5><ul><li>Drive software development in many parts of our iOS app including new features, fixing bugs, refactoring, etc.</li><li>Write well-designed, testable, and efficient code</li><li>Faithfully implement UI designs (with the understanding that it’s a 2-way dialogue)</li><li>Make an app that is a good citizen of the iOS platform by embracing OS features and UI conventions</li><li>Work with our support team to help explain and resolve problems as they arise</li></ul><h5><strong>iOS Developer requirements:</strong></h5><ul><li>Experience working on a distributed team</li><li>Ability to work well with other people and communicate professionally</li><li>Willingness to help others learn and grow without judgement</li><li>Excellent written and verbal communication skills in English</li><li>Proficiency with git</li><li>3+ years of experience building and shipping native iOS apps</li><li>Expert knowledge of Swift and at least some knowledge of Objective-C (we have about a 5:1 ratio of Swift to Objective-C)</li><li>Experience with technical writing such as documentation and specifications</li><li>Share and embody&nbsp;<a href='https://www.notion.so/1se/Our-Culture-ea12549713a64c19b7a91ea207f2614d' rel='nofollow'>our company values</a></li><li>Travel to our semi-annual retreats</li></ul><h5><strong>Bonus skills &amp; attributes:</strong></h5><ul><li>Experience with XCTest or other automated testing frameworks</li><li>Experience with unidirectional data flow architecture like ReSwift (or Redux from the web world)</li><li>Have used 1 Second Everyday.</li></ul><h5><strong>Benefits &amp; perks:</strong></h5><ul><li>Paid open vacation policy – We offer a MINIMUM of 2 weeks off each year. This isn’t a vague policy where open vacation means no vacation.</li><li>Healthcare benefits (currently only available in the United States)</li><li>Travel Bonus – $500 per year for a NO WORK vacation on your anniversary.</li><li>Wellness Bonus – $50 a month for a gym membership, yoga class, book club, or whatever makes you happy.</li><li>2 weeks paid parental leave.</li><li>Conferences of your choice.</li></ul><h5><strong>Why work at 1SE?</strong></h5><ul><li>Travel the world for our semi-annual paid retreats (<a href='https://medium.com/1-second-everyday/planning-1ses-5th-team-retreat-612316987ca9' rel='nofollow'>Last one was Peru and allowed families to come too!</a>)</li><li>You’d join our 100% distributed team – we value autonomy and flexible lifestyles.</li><li>We’re a diverse&nbsp;<a href='https://1se.co/team' rel='nofollow'>team</a>&nbsp;across 6 countries, 5 languages, and 7 time-zones (<a href='https://medium.com/1-second-everyday/motherhood-and-remote-work-2c80cfbc65e6' rel='nofollow'>First remote-baby for us</a>!)</li><li>You would work on an award-winning and beloved product with a diverse community&nbsp;<a href='https://www.instagram.com/1secondeveryday/' rel='nofollow'>around the world</a>!</li><li><a href='https://medium.com/1-second-everyday/the-origins-of-1-second-everyday-1aa5f2760c6f' rel='nofollow'>Help continue our story.</a></li></ul><p>We are an equal opportunities employer.&nbsp;We are a diverse team and welcome all walks of life. 1 Second Everyday is an equal opportunity employer and values diversity. We don’t discriminate on the basis of race, religion, color, gender, sexual orientation, age, marital status, veteran status, or disability status.</p><p>We are continuously expanding our hiring capabilities in other geographies. However, at this time&nbsp;we are unable to hire employees and contractors&nbsp;who reside and have to be paid in the specified countries below:</p><ul><li>Argentina</li><li>Brazil</li><li>Crimea</li><li>China</li><li>Cuba</li><li>Egypt</li><li>France</li><li>Iraq</li><li>Iran</li><li>Italy</li><li>Japan</li><li>Nigeria</li><li>North Korea</li><li>Spain</li><li>Sudan</li><li>Sweden</li><li>Syria</li></ul><p>We encourage you to continue to check back with future postings as we continue to expand our operational abilities in these countries.</p><p>Don’t think this position is the right fit? Check out our&nbsp;<a href='https://1-second-everyday.breezy.hr/' rel='nofollow'>other open positions</a>!</p>        </div><div>        <a href='https://1-second-everyday.breezy.hr/p/21b278a7ba7a-ios-developer?source=remote.co' rel='nofollow'>Apply for job</a>    </div>",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "9orl6wTiS62JZzTFvp3dTw",
     "url": "https://jobmote.com/job/61013/ios-developer-freelance-remote-berlin-germany/",
     "title": "iOS Developer - Freelance (Remote) - Berlin, Germany",
