json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,67 @@
 {
  "items": [
   {
+    "id": "m4SA0JKiQLCH8NA1NISuMQ",
+    "url": "https://stackoverflow.com/jobs/289796/lead-application-engineer-swift-uikit-appkit-livesurface?a=1zbGWo96qdKU",
+    "title": "Lead Application Engineer - Swift, UIKit/AppKit, Architecture, Data Model at LiveSurface  ",
+    "tags": [
+      "DBG:surround``OR(thrive,benefit,comfort,hour) 3N 2N(remot,work)",
+      "DBG_TECH1:k/t/w:appkit/apple/16",
+      "DBG_TECH1:k/t/w:c++/c/8",
+      "DBG_TECH1:k/t/w:c/c/5",
+      "DBG_TECH1:k/t/w:ios/apple/4",
+      "DBG_TECH1:k/t/w:ios/mobile/4",
+      "DBG_TECH1:k/t/w:macos/apple/4",
+      "DBG_TECH1:k/t/w:objective-c/apple/6",
+      "DBG_TECH1:k/t/w:objective-c/c/4",
+      "DBG_TECH1:k/t/w:objective-c/mobile/16",
+      "DBG_TECH1:k/t/w:swift/apple/25",
+      "DBG_TECH1:k/t/w:swift/mobile/40",
+      "DBG_TECH1:k/t/w:xcode/apple/8",
+      "DBG_TECH1:k/t/w:xcode/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=17, mobile=68, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=63, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "LiveSurface",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "parser": "SalaryParserWithNoiseImpl",
+      "isEquity": false,
+      "formatted": ""
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 20, 2019 3:06:25 AM",
+    "validThrough": "Aug 27, 2019 3:06:25 AM",
+    "crawled": "Aug 20, 2019 3:06:25 AM",
+    "content": "<h3><span>Lead Application Engineer - Swift, UIKit/AppKit, Architecture, Data Model</span>                </h3>                    <h4>About this job</h4>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Full-time</span>                                    </div>                                    <div>                                        <span>Experience level: </span>                                        <span>Senior, Lead</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Mobile Developer</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Industry: </span>                                        <span>Advertising, Graphic Design, Visual Effects</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>1–10 people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Private</span>                                    </div>                            </div>                    </div>                <div>Company: LiveSurface | No office location<br></div><h4>Technologies</h4><div></div><div>swift</div><div>uikit</div><div>swiftui</div><div>objective-c</div><div>combine</div>                <h4>Job description</h4>                <div><p>LiveSurface is an industry leader in visualization and image creation tools for creatives. We blend leading technology with hand-curated content to provide realtime photorealistic visualization to our users. At our heart, we are a team of creatives that thrive on transforming challenging problems into beautifully implemented solutions.<br><br>We are seeking a talented lead application engineer to join our team and help us to build the next generation of LiveSurface products. Interested in joining us? We’d love to hear from you.<br><br>Lead Application Engineer<br><br>What you’ll do:<br>_ Build the next generation of LiveSurface visualization products.<br>_ Work with the team to build a product roadmap and define milestones.<br>_ Plan and research best technologies, pulling primarily from Apple Frameworks.<br>_ Contribute to the overall product vision.<br>_ Architect clean, reusable and maintainable modules.<br>_ Leverage the latest frameworks (SwiftUI, Combine, Swift 5.x) to build new products.<br>_ Work tightly with render engine lead to integrate and influence the render engine design.<br>_ Refactor, optimize and pull from existing code from LiveSurface frameworks.<br>_ Deliver beautiful, well implemented code that is performant and easy to understand.<br><br>Who you are:<br>_ A university graduate with an undergraduate degree or better.<br>_ An experienced engineer with a minimum of 5 years working on UI code.<br>_ A fast learner, able to adapt to new frameworks quickly.<br>_ Experienced in creating iOS/macOS applications using Xcode.<br>_ Up-to-date with the latest frameworks.<br>_ Fluent in Swift, Objective-C and Apple Frameworks.<br>_ Experienced in using Apple Frameworks to create custom experiences.<br>_ An English speaker with strong communication skills.<br>_ Equally good at architecting as you are with refactoring.<br>_ Obsessed with clean, reusable modular architecture.<br>_ Focused on workflow and user experience.<br><br>We offer:<br>_ Remote work and a flexible schedule.<br>_ A wide range of challenging problems to solve.<br>_ A stable, revenue-based structure with an existing product (on the market for 5+ years).<br>_ Broad exposure: Your work will be seen and loved by thousands of users.<br>_ A highly acclaimed platform with a loyal user base.<br>_ A small, friendly, engineering team.<br>_ Product-focused, non-corporate management.<br><br>Extras that will make you stand out:<br>_ A background in graphics and gaming.<br>_ Knowledge of C, C++.<br>_ Experience with using Adobe and other industry standard graphics tools.<br><br>More about Context:<br><a href='http://www.livesurface.com/context.php' rel='nofollow'>http://www.livesurface.com/context.php</a><br><br><br></p>                </div>            <div>        <a href='https://stackoverflow.com/jobs/apply/289796?reset=False&amp;ra=1zbGWo96qdKU&amp;oqs=a%3D1zbGWo96qdKU' rel='nofollow'>Apply now</a></div><div>                                                                                                                                                            </div>            <h4>About LiveSurface</h4>            <div><p>LiveSurface was founded by an Apple alum designer/entrepreneur with&nbsp;25+ years in the branding and design fields and&nbsp;10+ years software engineering on macOS/iOS platforms.</p><p>Our small, talented team is distributed and lives in&nbsp;California, New York, Spain, Israel, Portugal, Germany.&nbsp;We love&nbsp;challenging problems and creating&nbsp;beautifully implemented solutions.&nbsp;We are split about evenly between engineering and content/marketing.</p><p>Our current customers include boutique design studios, well-know ad and design agencies and some of the biggest names in Silicon Valley tech.</p>            </div>                            <h4>Benefits</h4>                    <ul>                            <li>                                <span></span>                                <span>Remote work</span>                            </li>                            <li>                                <span></span>                                <span>Flexible schedule</span>                            </li>                            <li>                                <span></span>                                <span>Nice people</span>                            </li>                            <li>                                <span></span>                                <span>Collaborative workflow</span>                            </li>                            <li>                                <span></span>                                <span>Product-focused approach</span>                            </li>                    </ul>                ",
+    "place1": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    },
+    "place2": {
+      "locality": "UNSET",
+      "region": "UNSET",
+      "country": "UNSET"
+    }
+  },
+  {
     "id": "R2Jy0a68Rpa6RPwQQ1jlZw",
     "url": "https://jobmote.com/job/62655/ios-developer-remote/",
     "title": "iOS Developer (REMOTE)",
