better links-bookmarks

--- a/_data/communitynav.yml
+++ b/_data/communitynav.yml
@@ -75,27 +75,33 @@
     - title: "Company introduction"
       tagline: Is your company remote? Distributed? Something else?
       urlbookmark: 'introduction'
+      url: /community/remote-companies#introduction
       subnodes:
 
     - title: "Hiring"
       tagline: Everything about hiring in remote companies
       urlbookmark: 'hiring'
+      url: /community/remote-companies#hiring
 
     - title: "Hiring process"
       tagline: "Hiring in remote companies: tips and tricks"
       urlbookmark: 'hiring-process'
+      url: /community/remote-companies#hiring-process
 
     - title: "The candidates"
       tagline: What companies expect from candidates. Where/how to find candidates
       urlbookmark: 'candidates'
+      url: /community/remote-companies#candidates
 
     - title: "Interview"
       tagline: From the company/interviewer point of view
       urlbookmark: 'interview'
+      url: /community/remote-companies#interview
 
     - title: "Hackerrank/Leetcode and co."
       tagline: What companies think about these platforms
       urlbookmark: 'hackerrank-leetcode'
+      url: /community/remote-companies#hackerrank-leetcode
       #- title: Onboarding
       #  tagline:
       #  subnodes:
@@ -103,18 +109,22 @@
     - title: "Tools"
       tagline: "Zoom and other instruments we use in daily work."
       urlbookmark: 'tools'
+      url: /community/remote-companies#tools
 
     - title: "Management"
       tagline: "Everything about management in remote companies"
       urlbookmark: 'management'
+      url: /community/remote-companies#management
 
     - title: "Management and Productivity"
       tagline: "How to measure/improve productivity of a remote team"
       urlbookmark: 'productivity'
+      url: /community/remote-companies#productivity
 
     - title: "Retreats/Conferences"
       tagline: "Also Teambuilding. How to bring members of remote team together"
       urlbookmark: 'retreats-conferences'
+      url: /community/remote-companies#retreats-conferences
 
     #- title: Daily Routine
     #  tagline:
